--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@contentful/rich-text-plain-text-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
+    "@nivo/bar": "^0.67.0",
+    "@nivo/core": "^0.67.0",
+    "@nivo/line": "^0.67.0",
     "@segment/analytics.js-core": "^4.1.5",
     "@segment/snippet": "^4.13.1",
     "@stripe/react-stripe-js": "^1.2.2",
     "@stripe/stripe-js": "^1.12.1",
+    "@tastiest-io/tastiest-components": "^0.6.0",
     "@types/analytics-node": "^3.1.4",
+    "@types/react-table": "^7.0.29",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "D": "^1.0.0",
@@ -60,6 +65,7 @@
     "react-paginate": "^6.5.0",
     "react-redux": "^7.2.1",
     "react-redux-firebase": "^3.9.0",
+    "react-table": "^7.6.3",
     "react-use": "^15.3.4",
     "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
@@ -88,6 +94,7 @@
     "@typescript-eslint/parser": "^3.9.0",
     "autoprefixer": "^10.2.4",
     "babel-jest": "^26.6.3",
+    "clsx": "^1.1.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.4.0",
