--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "dashboard.tastiest.io",
   "version": "0.1.0",
   "license": "UNLICENSED",
   "scripts": {
@@ -14,7 +14,7 @@
     "convert-svg": "rm -r ./public/assets/*/*.tsx && svgr --typescript -d ./public/assets/ ./public/assets/"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
+    "@ant-design/icons": "^4.6.2",
     "@contentful/rich-text-plain-text-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
@@ -25,9 +25,9 @@
     "@segment/snippet": "^4.13.1",
     "@stripe/stripe-js": "^1.12.1",
     "@svgr/cli": "^5.5.0",
-    "@tastiest-io/tastiest-components": "^0.18.0",
+    "@tastiest-io/tastiest-components": "^0.22.0",
     "@tastiest-io/tastiest-icons": "^0.8.0",
-    "@tastiest-io/tastiest-utils": "^0.11.0",
+    "@tastiest-io/tastiest-utils": "^0.61.0",
     "@types/analytics-node": "^3.1.4",
     "@types/react-table": "^7.0.29",
     "@zeit/next-css": "^1.0.1",
@@ -67,7 +67,7 @@
     "react-redux": "^7.2.1",
     "react-redux-firebase": "^3.9.0",
     "react-table": "^7.6.3",
-    "react-use": "^15.3.4",
+    "react-use": "^17.2.3",
     "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
