--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@stripe/stripe-js": "^1.12.1",
     "@svgr/cli": "^5.5.0",
     "@tastiest-io/tastiest-components": "^0.24.0",
-    "@tastiest-io/tastiest-icons": "^0.8.0",
-    "@tastiest-io/tastiest-utils": "^0.61.0",
+    "@tastiest-io/tastiest-icons": "^0.10.0",
+    "@tastiest-io/tastiest-utils": "^0.90.0",
     "@types/analytics-node": "^3.1.4",
     "@types/react-table": "^7.0.29",
     "@zeit/next-css": "^1.0.1",
@@ -61,6 +61,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-date-picker": "^8.0.7",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.0",
     "react-number-format": "^4.4.4",
     "react-paginate": "^6.5.0",
@@ -72,7 +73,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
     "stripe": "^8.134.0",
-    "swr": "^0.3.9",
+    "swr": "^0.5.5",
     "uuid": "^8.3.2",
     "vercel": "^20.1.2",
     "webpack": "4.46.0"
@@ -89,6 +90,7 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.53",
+    "@types/react-datepicker": "^3.1.8",
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
