--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@segment/snippet": "^4.13.1",
     "@stripe/stripe-js": "^1.12.1",
     "@svgr/cli": "^5.5.0",
-    "@tastiest-io/tastiest-components": "^0.62.0",
+    "@tastiest-io/tastiest-components": "^0.75.0",
     "@tastiest-io/tastiest-icons": "^0.24.0",
-    "@tastiest-io/tastiest-utils": "^0.208.0",
+    "@tastiest-io/tastiest-utils": "^1.7.0",
     "@types/analytics-node": "^3.1.4",
     "@types/react-table": "^7.0.29",
     "@zeit/next-css": "^1.0.1",
@@ -49,10 +49,9 @@
     "global": "^4.4.0",
     "groq": "^1.149.16",
     "moment": "^2.27.0",
-    "next": "^10.0.7",
+    "next": "^11.1.2",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^1.4.0",
-    "next-images": "^1.4.0",
     "next-session": "^3.3.2",
     "next-svgr": "^0.0.2",
     "node-sass": "^5.0.0",
@@ -69,14 +68,14 @@
     "react-redux-firebase": "^3.9.0",
     "react-table": "^7.6.3",
     "react-use": "^17.2.3",
-    "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
+    "rsuite": "4.10.3",
     "stripe": "^8.134.0",
     "swr": "^0.5.5",
     "uuid": "^8.3.2",
     "vercel": "^20.1.2",
-    "webpack": "4.46.0"
+    "webpack": "^5.59.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
@@ -95,7 +94,7 @@
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^3.9.0",
-    "autoprefixer": "^10.2.4",
+    "autoprefixer": "^10.3.7",
     "babel-jest": "^26.6.3",
     "clsx": "^1.1.1",
     "eslint": "^7.7.0",
@@ -107,14 +106,14 @@
     "husky": "^4.2.5",
     "jest": "^26.6.3",
     "lint-staged": "^10.2.11",
-    "postcss": "^8.2.6",
+    "postcss": "^8.3.10",
     "prettier": "^2.0.5",
     "react-addons-test-utils": "^15.6.2",
-    "tailwindcss": "^2.0.3",
+    "tailwindcss": "2.1.4",
     "tailwindcss-children": "^2.1.0",
     "tailwindcss-filters": "^3.0.0",
     "ts-jest": "^26.5.3",
-    "typescript": "^4.2.2",
+    "typescript": "4.3.2",
     "webpack-cli": "^4.5.0"
   },
   "lint-staged": {
