--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@segment/snippet": "^4.13.1",
     "@stripe/stripe-js": "^1.12.1",
     "@svgr/cli": "^5.5.0",
-    "@tastiest-io/tastiest-components": "^0.77.0",
+    "@tastiest-io/tastiest-components": "^0.80.0",
     "@tastiest-io/tastiest-icons": "^0.24.0",
     "@tastiest-io/tastiest-utils": "^1.7.0",
     "@types/analytics-node": "^3.1.4",
@@ -62,6 +62,7 @@
     "react-date-picker": "^8.0.7",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.0",
+    "react-email-editor": "^1.4.0",
     "react-number-format": "^4.4.4",
     "react-paginate": "^6.5.0",
     "react-redux": "^7.2.1",
