Followers page init

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@svgr/cli": "^5.5.0",
     "@tastiest-io/tastiest-components": "^0.80.0",
     "@tastiest-io/tastiest-icons": "^0.24.0",
-    "@tastiest-io/tastiest-utils": "^1.16.0",
+    "@tastiest-io/tastiest-utils": "^1.19.0",
     "@types/analytics-node": "^3.1.4",
     "@types/react-table": "^7.0.29",
     "@zeit/next-css": "^1.0.1",
@@ -40,6 +40,7 @@
     "classnames": "^2.2.6",
     "contentful": "^8.1.7",
     "crypto-js": "^4.0.0",
+    "date-fns": "^2.25.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "firebase": "^8.2.1",
@@ -48,6 +49,7 @@
     "firestore-pagination-hook": "^1.0.0",
     "global": "^4.4.0",
     "groq": "^1.149.16",
+    "luxon": "^2.0.2",
     "moment": "^2.27.0",
     "next": "^11.1.2",
     "next-compose-plugins": "^2.2.0",
@@ -88,6 +90,7 @@
     "@types/lodash": "^4.14.161",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.set": "^4.3.6",
+    "@types/luxon": "^2.0.5",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.53",
