--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "dashboard.tastiest.io",
   "version": "0.1.0",
-  "license": "UNLICENSED",
+  "description": "The restaurant dashboard for Tastiest.",
+  "license": "TASTIEST TECHNOLOGIES",
+  "private": true,
   "scripts": {
     "now": "npm run now",
     "dev": "NODE_ENV=development next dev",
@@ -14,7 +16,7 @@
     "convert-svg": "rm -r ./public/assets/*/*.tsx && svgr --typescript -d ./public/assets/ ./public/assets/"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.6.2",
+    "@ant-design/icons": "^4.7.0",
     "@contentful/rich-text-plain-text-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
@@ -25,12 +27,13 @@
     "@segment/snippet": "^4.13.1",
     "@stripe/stripe-js": "^1.12.1",
     "@svgr/cli": "^5.5.0",
-    "@tastiest-io/tastiest-components": "^0.80.0",
     "@tastiest-io/tastiest-icons": "^0.24.0",
-    "@tastiest-io/tastiest-utils": "^1.19.0",
+    "@tastiest-io/tastiest-ui": "^0.45.0",
+    "@tastiest-io/tastiest-utils": "^1.22.0",
     "@types/analytics-node": "^3.1.4",
     "@types/react-table": "^7.0.29",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "D": "^1.0.0",
     "analytics-node": "^4.0.1",
@@ -49,6 +52,7 @@
     "firestore-pagination-hook": "^1.0.0",
     "global": "^4.4.0",
     "groq": "^1.149.16",
+    "less": "^4.1.2",
     "luxon": "^2.0.2",
     "moment": "^2.27.0",
     "next": "^12.0.3",
@@ -70,11 +74,12 @@
     "react-redux": "^7.2.1",
     "react-redux-firebase": "^3.9.0",
     "react-table": "^7.6.3",
-    "react-use": "^17.2.3",
+    "react-use": "^17.3.1",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
-    "rsuite": "4.10.3",
+    "rsuite": "^5.2.1",
     "stripe": "^8.134.0",
+    "styled-components": "^5.3.3",
     "swr": "^0.5.5",
     "tailwindcss": "2.1.4",
     "uuid": "^8.3.2",
