--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "groq": "^1.149.16",
     "less": "^4.1.2",
     "luxon": "^2.0.2",
+    "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.27.0",
     "next": "^12.0.3",
     "next-compose-plugins": "^2.2.0",
