--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@contentful/rich-text-plain-text-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@nivo/bar": "^0.67.0",
     "@nivo/core": "^0.67.0",
     "@nivo/line": "^0.67.0",
@@ -28,8 +30,8 @@
     "@stripe/stripe-js": "^1.12.1",
     "@svgr/cli": "^5.5.0",
     "@tastiest-io/tastiest-icons": "^0.24.0",
-    "@tastiest-io/tastiest-ui": "^0.45.0",
-    "@tastiest-io/tastiest-utils": "^1.22.0",
+    "@tastiest-io/tastiest-ui": "^0.56.0",
+    "@tastiest-io/tastiest-utils": "^1.33.0",
     "@types/analytics-node": "^3.1.4",
     "@types/react-table": "^7.0.29",
     "@zeit/next-css": "^1.0.1",
@@ -54,6 +56,7 @@
     "groq": "^1.149.16",
     "less": "^4.1.2",
     "luxon": "^2.0.2",
+    "mapbox-gl": "^2.6.1",
     "moment": "^2.27.0",
     "next": "^12.0.3",
     "next-compose-plugins": "^2.2.0",
@@ -69,6 +72,7 @@
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.0",
     "react-email-editor": "^1.4.0",
+    "react-hook-form": "^7.21.2",
     "react-number-format": "^4.4.4",
     "react-paginate": "^6.5.0",
     "react-redux": "^7.2.1",
